--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.16",
+    "@reduxjs/toolkit": "^2.2.2",
     "@types/react": "~18.2.45",
     "expo": "~50.0.8",
     "expo-av": "^13.10.5",
@@ -24,6 +25,7 @@
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-redux": "^9.1.0",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
